update loading.gif in Loading page

--- a/web/upload_app/templates/analysis.html
+++ b/web/upload_app/templates/analysis.html
@@ -19,7 +19,7 @@
 
 
 <div class="Loading">
-        <img src="{% static 'ajax-loader.gif' %}">
+        <img class="Loading_img" src="{% static 'loading.gif' %}">
         <h3>분석 중 입니다...</h3>
 </div>
 
