--- a/web/upload_app/templates/layout.html
+++ b/web/upload_app/templates/layout.html
@@ -37,7 +37,7 @@
             </div>
             <div class= "navbar-collapse collapse" id="navbar" >
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="navbar-right-li" href="#">분석</a></li>
+                    <li class="active"><a class="navbar-right-li" href="/upload">분석</a></li>
                     <li><a class="navbar-right-li" href="#">통계</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
