동적리포트에 연결한 IP,Host 테이블 추가

--- a/web/static/css/report.css
+++ b/web/static/css/report.css
@@ -54,6 +54,16 @@ body {
     font-size: 1vw;
     font-weight: 700;
 }
+.panel-vertical-left{
+    width: 47.5%;
+    margin-right: 2.5%;
+    float: left;
+}
+.panel-vertical-right{
+    width: 47.5%;
+    margin-left: 2.5%;
+    float: left;
+}
 
 .report_div_2 {
 
