--- a/web/static/css/report.css
+++ b/web/static/css/report.css
@@ -14,6 +14,10 @@ body {
     height: 99%;
 }
 
+.container-report {
+	margin-top: 2%;
+}
+
 .row-detail{
     padding: 0% 8% 2% 8%;
 }
@@ -54,6 +58,12 @@ body {
     font-size: 1vw;
     font-weight: 700;
 }
+
+.panel-body {
+	color: #2f2f33;
+    font-weight: 500;
+}
+
 .panel-vertical-left{
     width: 47.5%;
     margin-right: 2.5%;
@@ -220,4 +230,16 @@ h1 {
 }
 #badge_color_red {
 	background-color: #f15f5f !important;
+}
+
+.badge {
+	line-height: 1.6; 
+    font-size: 13px;
+    margin-bottom: 5px;
+    color: #48484d;
+}
+
+li {
+    color: #2f2f33;
+    margin-left: -4%;
 }
