메인어플리케이션 생성 및 홈 화면 연동

--- a/web/analysisapp/templates/layout.html
+++ b/web/analysisapp/templates/layout.html
@@ -33,7 +33,7 @@
                 <span class="navbar-brand-custom1">N</span>
                 <span class="navbar-brand-custom2">P</span>
                 <span class="navbar-brand-project">&nbsp;:&nbsp;</span>
-                <a class="navbar-brand-project" href="/upload" > MASK</a>
+                <a class="navbar-brand-project" href="/" > MASK</a>
                 
             </div>
             <div class= "navbar-collapse collapse" id="navbar" >
