modify home.css and add chart to report page

--- a/web/analysisapp/templates/dynamic_report.html
+++ b/web/analysisapp/templates/dynamic_report.html
@@ -3,6 +3,11 @@
 <script src="{% static  '/js/progress.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static '/css/report.css' %}" />
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+<script src="{% static  '/js/chart.js' %}"></script>
+<link rel="stylesheet" type="text/css" href="{% static '/css/chart.css' %}" />
+
 <!-- Start Report Row -->
 <div class="container-report">
     <div class="row">
@@ -138,6 +143,25 @@
                     {% else %}               
                             <span>There is no Connects IP</span>
                     {% endif %}
+
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row" style="margin-top: 2%;">
+        <div class="row_detail_2">
+            <div class="panel panel-default">
+
+                <div class="panel-heading">
+                    <span>Chart</span>
+                </div>
+                <div class="panel-body">
+
+                    <div id="canvas-holder">
+                        <canvas id="chart-area"></canvas>
+                    </div>
+                    <script src="{% static  '/js/chart-doughnut.js' %}"></script>
 
                 </div>
             </div>
