리포트화면 디자인 변경 바이러스 확률 bar 디자인 변경 및 파이차트 위치 조정

--- a/web/analysisapp/templates/layout.html
+++ b/web/analysisapp/templates/layout.html
@@ -6,11 +6,13 @@
     <title>{% block page_title %}MASK{% endblock %}</title>
     <meta charset="utf-8">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="{% static '/css/bootstrap.css' %}" >
     <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="{% static  '/js/bootstrap.js' %}"></script>
     <script src="{% static  '/js/layout.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
+
+
 
 </head>
  <!-- d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom" 
