--- a/web/analysisapp/templates/dynamic_report.html
+++ b/web/analysisapp/templates/dynamic_report.html
@@ -40,27 +40,33 @@
             </div>
         </div>
     </div>
-    
-    <!--Process bar-->
+
     <div class="row">
         <div class="row_detail_2">
             <div class="panel panel-default">
-
                 <div class="panel-heading">
-                    <span>AI</span>
+                    <span>Chart</span>
                 </div>
                 <div class="panel-body">
-                    <div class="progress skill-bar">
-                        <div class="progress-bar" role="progressbar" aria-valuenow={{ report_form.fields.score.initial }} aria-valuemin="0" aria-valuemax="100">
-                            <span class="skill">safe<i class="val">{{ report_form.fields.score.initial }}%</i></span>
+                    <div class="panel-body-half">
+                        <label id="virus-percent">바이러스 확률</label>
+                        <div class="progress progress-bar-vertical">
+                            <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow=50 aria-valuemin="0" aria-valuemax="100">
+                                {{ report_form.fields.score.initial }}%
+                                <!--{{ report_form.fields.score.initial }}%-->
+                            </div>
                         </div>
                     </div>
-
+                    <div class="panel-body-half">
+                        <div id="canvas-holder" mc-data-set="200,100,400,500,150,300,400">
+                            <canvas id="chart-area"></canvas>
+                        </div>
+                        <script src="{% static  '/js/chart-doughnut.js' %}"></script>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
     <!--Tags-->
     <div class="row">
         <div class="row_detail_2">
@@ -148,25 +154,7 @@
             </div>
         </div>
     </div>
-    
-    <div class="row" style="margin-top: 2%;">
-        <div class="row_detail_2">
-            <div class="panel panel-default">
 
-                <div class="panel-heading">
-                    <span>Chart</span>
-                </div>
-                <div class="panel-body">
-
-                    <div id="canvas-holder">
-                        <canvas id="chart-area"></canvas>
-                    </div>
-                    <script src="{% static  '/js/chart-doughnut.js' %}"></script>
-
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 
