--- a/web/analysisapp/templates/static_report.html
+++ b/web/analysisapp/templates/static_report.html
@@ -53,7 +53,7 @@
                     <div class="panel-body-half">
                         <label id="virus-percent">바이러스 확률</label>
                         <div class="progress progress-bar-vertical">
-                            <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow=50 aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow={{ report_form.fields.score.initial }} aria-valuemin="0" aria-valuemax="100">
                                 {{ report_form.fields.score.initial }}%
                                 <!--{{ report_form.fields.score.initial }}%-->
                             </div>
